--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,9 +11,48 @@ http {
 
     server {
         listen 80;
-        server_name CT519_XXX.ck2all.com;
+        server_name CT519_030.ck2all.com;
+        return 301 https://$host$request_uri;
 
-        location / {
+        # location / {
+        #     proxy_pass http://backend;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # }
+
+        # location /about {
+        #     proxy_pass http://web1/about;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # }
+
+        # location /myresearch {
+        #     proxy_pass http://web2/myresearch;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # }
+
+        # location /ct519 {
+        #     proxy_pass http://web3/ct519;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name CT519_030.ck2all.com;
+
+        ssl_certificate /etc/letsencrypt/live/CT519_030.ck2all.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/CT519_030.ck2all.com/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+
+    location / {
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -41,28 +80,4 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
-
-    # server {
-    #     listen 443 ssl;
-    #     server_name toodev.org www.your_domain;
-
-    #     ssl_certificate /etc/letsencrypt/live/toodev.org/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/toodev.org/privkey.pem;
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers HIGH:!aNULL:!MD5;
-
-    #     location / {
-    #         proxy_pass http://ws1;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     }
-
-    #     location /about {
-    #         proxy_pass http://ws2;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     }
-    # }
 }
