--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,7 @@ http {
 
     server {
         listen 80;
-        server_name CT519_030.ck2all.com;
+        server_name CT519-030.ck2all.com;
         return 301 https://$host$request_uri;
 
         # location / {
@@ -45,10 +45,10 @@ http {
 
     server {
         listen 443 ssl;
-        server_name CT519_030.ck2all.com;
+        server_name CT519-030.ck2all.com;
 
-        ssl_certificate /etc/letsencrypt/live/CT519_030.ck2all.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/CT519_030.ck2all.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/CT519-030.ck2all.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/CT519-030.ck2all.com/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
